<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/darkblue"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        style="@style/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/drawable_padding"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/drawable_padding"
        android:ems="10"
        android:hint="@string/password"
        style="@style/hint"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginButton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="@string/login"
        android:ems="10"/>

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


</LinearLayout>