<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/donationListItem"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/item"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_shopping_basket_24"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/itemType"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_format_list_numbered_24"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_call_white_24dp"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>