<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/moneyListItem">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_money_24"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_call_white_24dp"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>





</LinearLayout>